[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project Brain Games"
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/rosoporto/python-project-49.git"
packages = [{include = "brain_games"},]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Framework :: Flake8",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Arcade",
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
